Update index.html for better UI

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>Ayobami Ogunsanya - AI/ML Engineer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <header class="header">
         <nav class="navbar">
             <div class="container">
-                <a href="#home" class="logo">Ayobami Ogunsanya</a>
+                <a href="#home" class="logo">Ayo.</a>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -23,9 +24,7 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <i class="fas fa-bars"></i>
                 </div>
             </div>
         </nav>
@@ -35,14 +34,17 @@
         <section id="home" class="hero">
             <div class="container hero-container">
                 <div class="hero-text">
-                    <h1 class="headline">Ayobami Ogunsanya – AI/ML Engineer | Data Enthusiast | Community Builder</h1>
+                    <h1 class="headline">Ayobami Ogunsanya</h1>
+                    <p class="subtitle">AI/ML Engineer | Data Enthusiast | Community Builder</p>
                     <p class="bio">
                         A highly motivated Machine Learning Engineer with hands-on experience in designing and deploying intelligent systems. Passionate about leveraging AI to solve real-world challenges and drive digital transformation in emerging markets.
                     </p>
-                    <a href="#projects" class="cta-button">View My Work</a>
+                    <a href="#projects" class="cta-button">View My Work <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="hero-image">
-                    <img src="https://github.com/AyoBankole.png?size=300" alt="Ayobami Ogunsanya">
+                    <div class="image-wrapper">
+                        <img src="https://github.com/AyoBankole.png?size=300" alt="Ayobami Ogunsanya">
+                    </div>
                 </div>
             </div>
         </section>
